--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,7 +23,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  
-  "background_color": "#ffffff",
+  "theme_color": "hsl(0, 0%, 100%)",
+  "background_color": "hsl(0, 0%, 100%)",
   "prefer_related_applications": true
 }
