--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-responsive": "^9.0.0-beta.8"
+    "react-responsive": "^9.0.0-beta.8",
+    "sharp": "^0.30.4"
   },
   "devDependencies": {
     "eslint": "8.15.0",
