--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0-beta.8",
+    "redux": "^4.2.0",
     "sharp": "^0.30.4"
   },
   "devDependencies": {
