--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Zhenil.kz",
-  "name": "Zhenil.kz",
+  "short_name": "Okki.kz",
+  "name": "Okki - потому что с нами проще!",
   "icons": [
     {
       "src": "favicon.ico",
