--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,27 +1,30 @@
 {
   "short_name": "Okki.kz",
-  "name": "Okki - потому что с нами проще!",
+  "name": "Okki - потому что проще!",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon",
-      "purpose": "any maskable"
+        "src": "/manifest/icon-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "any maskable"
+        "src": "/manifest//icon-256x256.png",
+        "sizes": "256x256",
+        "type": "image/png"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "any maskable"
+        "src": "/manifest//icon-384x384.png",
+        "sizes": "384x384",
+        "type": "image/png"
+    },
+    {
+        "src": "/manifest//icon-512x512.png",
+        "sizes": "512x512",
+        "type": "image/png"
     }
-  ],
-  "start_url": ".",
+],
+  "scope": "/",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#6b5bd2",
   "background_color": "#ffffff",
