--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sitemap":"node ./sitemap/sitemap.js"
   },
   "dependencies": {
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
+    "nextjs-sitemap-generator": "^1.3.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-easy-crop": "^4.2.0",
