--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "sitemap": "node ./sitemap/sitemap.js"
+    "sitemap": "node ./sitemap/sitemap.js",
+    "compress": "node ./compress-image/compress.js"
   },
   "dependencies": {
     "next": "12.1.6",
