--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,27 +3,27 @@
   "name": "Okki - потому что проще!",
   "icons": [
     {
-        "src": "/manifest/icon-192x192.webp",
+        "src": "/manifest/icon-192x192.png",
         "sizes": "192x192",
-        "type": "image/webp",
+        "type": "image/png",
         "purpose": "any maskable"
     },
     {
-        "src": "/manifest/icon-256x256.webp",
+        "src": "/manifest/icon-256x256.png",
         "sizes": "256x256",
-        "type": "image/webp",
+        "type": "image/png",
         "purpose": "any maskable"
     },
     {
-        "src": "/manifest/icon-384x384.webp",
+        "src": "/manifest/icon-384x384.png",
         "sizes": "384x384",
-        "type": "image/webp",
+        "type": "image/png",
         "purpose": "any maskable"
     },
     {
-        "src": "/manifest/icon-512x512.webp",
+        "src": "/manifest/icon-512x512.png",
         "sizes": "512x512",
-        "type": "image/webp",
+        "type": "image/png",
         "purpose": "any maskable"
     }
 ],
