--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "sitemap": "node ./sitemap/sitemap.js",
-    "compress": "node ./compress-image/compress.js",
-    "analyze": "cross-env ANALYZE=true next build"
+    "compress": "node ./compress-image/compress.js"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^12.3.1",
     "cross-env": "^7.0.3",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
