--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "cross-env": "^7.0.3",
-    "nanoid": "^4.0.0",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "nextjs-sitemap-generator": "^1.3.1",
@@ -22,7 +21,8 @@
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0",
     "redux": "^4.2.0",
-    "sharp": "^0.30.7"
+    "sharp": "^0.30.7",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "8.15.0",
