--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "nextjs-sitemap-generator": "^1.3.1",
@@ -22,6 +23,7 @@
     "react-responsive": "^9.0.0",
     "redux": "^4.2.0",
     "sharp": "^0.30.7",
+    "style-loader": "^3.3.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
