--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "next": "12.1.6",
+    "next-pwa": "^5.6.0",
     "next-redux-wrapper": "^7.0.5",
     "nextjs-sitemap-generator": "^1.3.1",
     "react": "18.1.0",
