--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "compress": "node ./compress-image/compress.js"
   },
   "dependencies": {
+    "aes-encryption": "^1.0.4",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.2",
     "express": "^4.18.2",
     "html5-qrcode": "^2.3.1",
+    "knex": "^2.3.0",
     "next": "12.1.6",
     "next-pwa": "^5.6.0",
     "next-redux-wrapper": "^7.0.5",
