--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "express": "^4.18.2",
     "html5-qrcode": "^2.3.1",
     "knex": "^2.3.0",
-    "next": "12.1.6",
+    "next": "^13.1.1",
     "next-pwa": "^5.6.0",
     "next-redux-wrapper": "^7.0.5",
     "nextjs-sitemap-generator": "^1.3.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-easy-crop": "^4.6.2",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.0",
@@ -37,6 +37,6 @@
   },
   "devDependencies": {
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "^13.1.1"
   }
 }
