--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "html5-qrcode": "^2.3.1",
     "knex": "^2.3.0",
     "next": "^13.1.1",
+    "next-auth": "^4.18.7",
     "next-pwa": "^5.6.0",
-    "next-redux-wrapper": "^7.0.5",
+    "next-redux-wrapper": "^8.1.0",
     "nextjs-sitemap-generator": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,14 +30,14 @@
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.0",
     "redux": "^4.2.0",
-    "sharp": "^0.30.7",
+    "sharp": "^0.31.3",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
     "style-loader": "^3.3.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "eslint": "8.15.0",
+    "eslint": "^8.31.0",
     "eslint-config-next": "^13.1.1"
   }
 }
