--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-pwa": "^5.6.0",
     "next-redux-wrapper": "^8.1.0",
     "nextjs-sitemap-generator": "^1.3.1",
+    "platform": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.6.2",
