--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-redux-wrapper": "^8.1.0",
     "nextjs-sitemap-generator": "^1.3.1",
     "platform": "^1.3.6",
+    "public-ip": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.6.2",
