--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "aes-encryption": "^1.0.4",
+    "cookies-next": "^2.1.1",
     "cross-env": "^7.0.3",
     "html5-qrcode": "^2.3.1",
     "knex": "^2.4.0",
-    "next": "^13.1.1",
+    "next": "^13.1.2",
     "next-auth": "^4.18.8",
     "next-pwa": "^5.6.0",
     "next-redux-wrapper": "^8.1.0",
@@ -34,6 +35,6 @@
   },
   "devDependencies": {
     "eslint": "^8.31.0",
-    "eslint-config-next": "^13.1.1"
+    "eslint-config-next": "^13.1.2"
   }
 }
