--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "sitemap": "node ./sitemap/sitemap.js",
-    "compress": "node ./compress-image/compress.js"
+    "compress": "node ./compress-image/compress.js",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^13.1.2",
     "aes-encryption": "^1.0.4",
     "cookies-next": "^2.1.1",
     "cross-env": "^7.0.3",
